--- a/frontend/myapp/src/registrar_dashboard/components/manage.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/manage.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #f5f5f5;
+    background-color: rgba(255, 255, 255, 0);
     height: 100%;
     width: 100%;
     border-radius: 3px;
