--- a/frontend/myapp/src/lecturer_dashboard/lecturer_dashboard.css
+++ b/frontend/myapp/src/lecturer_dashboard/lecturer_dashboard.css
@@ -12,32 +12,39 @@
 .leftcontainer {
     background-color: rgba(255, 255, 255, 0.85);
     border-radius: 3px;
-    width: 20vw;
+    width: 20%;
+    min-width: 200px;
     height: 100vh;
-    position: absolute;
-    top: 1%;
-    font-size: 1.5rem;
-    left: 0;
     display: flex;
     flex-direction: column;
-    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds shadow for separation */
-}
-.profile_picture_container {
-    width: 135px;
-    height: 135px;
-    border-radius: 50%;
-    background-color: #ccc; /* Placeholder background */
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    
+    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px 10px;
+    box-sizing: border-box;
+    z-index: 10;
 }
+.pp_container {
+    width: 100px;  /* Set the container size */
+    height: 100px;
+    position: absolute;
+    left :30%;
+    overflow: hidden;
+    border-radius: 50%; /* Makes it circular */
+    border: 1px solid black; /*Optional border */
+  }
 
-.profile_picture {
+.pp {
     width: 100%;
     height: 100%;
+}
+
+.pp_container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 50%;
 }
 
@@ -67,6 +74,7 @@
     border-radius: 3px;
     border-color: rgb(255, 255, 255);
     text-align: left;
+    padding-left: 5%;
     font-weight: bold;
     transition: background-color 0.3s;
 }
@@ -100,3 +108,4 @@
 .pending-counter:empty {
   display: none;
 }
+
