--- a/frontend/myapp/src/student_dashboard/student_dashboard.css
+++ b/frontend/myapp/src/student_dashboard/student_dashboard.css
@@ -87,7 +87,7 @@ body {
     bottom: 2%;
     width: 30%;
     height: 6%;
-    background-color: white;
+    background-color: red;
     border-radius: 3px;
     border: none;
     cursor: pointer;
@@ -95,7 +95,7 @@ body {
 
   }
   .logout_button:hover {
-    background-color: red; 
+    background-color: #d32f2f; 
   }
   .pp {
     position: absolute;
